--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hi 睿宇</title>
+  <title>hi 睿宇 hi</title>
 </head>
 
 <body>
